middleware / models / autres fix / toujours bug sur authentification
